# flask_template_2024

./: .gitignore  README.md  pyproject.toml
src/: app.py  models.py
tests/: conftest.py  test_app.py
